tests/ui/attributes/attrs-with-no-formal-in-generics-1.stderr
error: trailing attribute after generic parameter
  --> $DIR/attrs-with-no-formal-in-generics-1.rs:9:29
   |
LL | impl<#[rustc_dummy] 'a, 'b, #[oops]> RefIntPair<'a, 'b> {
   |                             ^^^^^^^ attributes must go before parameters

error: aborting due to 1 previous error

